namespace Chickensoft.UMLGenerator.Tests;

public class Test3
{

}